(library
 (name hcl_parser)
 (wrapped false)
 (libraries hcl_parser_value menhirLib))

(menhir
 (modules hcl_parser)
 (flags --explain --table))

(rule
 (target hcl_parser_errors.ml)
 (deps hcl_parser.mly hcl_parser_errors.messages)
 (action
  (with-stdout-to
   %{target}
   (run
    menhir
    %{dep:hcl_parser.mly}
    --compile-errors
    %{dep:hcl_parser_errors.messages}))))
