(library
 (name terrat_tag_query_parser)
 (wrapped false)
 (libraries menhirLib sedlex terrat_tag_query_parser_value))

(menhir
 (modules terrat_tag_query_parser)
 (flags --table))

(rule
 (target terrat_tag_query_parser_errors.ml)
 (deps terrat_tag_query_parser.mly terrat_tag_query_parser_errors.messages)
 (action
  (with-stdout-to
   %{target}
   (run
    menhir
    %{dep:terrat_tag_query_parser.mly}
    --compile-errors
    %{dep:terrat_tag_query_parser_errors.messages}))))
